--- a/_posts/2017-04-15-release.md
+++ b/_posts/2017-04-15-release.md
@@ -5,7 +5,7 @@ title: "2017-04-15 release"
 date: 2017-04-15
 summary: "Improvements to the representation of the developing tooth"
 categories: release
-image: '/anatomy/images/u-logo.jpg'
+image: 'https://upload.wikimedia.org/wikipedia/commons/a/aa/Toothbud11-19-05labeled.jpg'
 tags:
  - release
 ---
