--- a/_posts/2017-05-21-release.md
+++ b/_posts/2017-05-21-release.md
@@ -11,8 +11,8 @@ tags:
 ---
 
 
- * NTR: rectosigmoid junction. fixes. #1319
- * NTR: intertragic incisure. Fixes #1320
+ * NTR: rectosigmoid junction. fixes. [1319](https://github.com/obophenotype/uberon/issues/1319)
+ * NTR: intertragic incisure. Fixes [1320](https://github.com/obophenotype/uberon/issues/1320)
 
 # Ontology Diff Report
 
