--- a/_posts/2017-09-09-release.md
+++ b/_posts/2017-09-09-release.md
@@ -13,20 +13,20 @@ tags:
 Note that in this release, the PURLs for all NCIT xrefs changed, resulting in a large diff report.
 
  * Neuro
-    * relaxed owldef of medial septal nucleus, as it was causing incorrect inferences. Fixes #1356, @tgbugs
+    * relaxed owldef of medial septal nucleus, as it was causing incorrect inferences. Fixes [1356](https://github.com/obophenotype/uberon/issues/1356), [tgbugs](https://github.com/tgbugs)
     * Added placeholder definition for medial septal complex clarifying that it includes the diagonal band nucleus as well as MSN
  * Histology
     * Reviewed stroma/parenchyma design pattern
-    * NT: parenchyma of mammary gland, fixes #1349
+    * NT: parenchyma of mammary gland, fixes [1349](https://github.com/obophenotype/uberon/issues/1349)
     * histology notes for bladder, see https://github.com/monarch-initiative/monarch-disease-ontology/issues/366
     * CP stroma: fixing def and adding cellular composition
     * relabeled/defining vagina stroma
  * Skeletal
     * NTRs for joints of auditory ossicles, https://github.com/obophenotype/mammalian-phenotype-ontology/issues/2305
-    * Changed connected-to to connects for inter-limb regions, fixes #1355
+    * Changed connected-to to connects for inter-limb regions, fixes [1355](https://github.com/obophenotype/uberon/issues/1355)
     * tweaking def of TMJ, add notes to nasal fin
  * Meta
-    * Use OBO purl for NCIT, fixes #1350
+    * Use OBO purl for NCIT, fixes [1350](https://github.com/obophenotype/uberon/issues/1350)
 
 # Ontology Diff Report
 
