--- a/_posts/2017-10-28-release.md
+++ b/_posts/2017-10-28-release.md
@@ -14,42 +14,42 @@ tags:
 
 ## New terms
 
- * thagomizer - contributed by @balhoff
- * interoceptive system fixes #1385
+ * thagomizer - contributed by [balhoff](https://github.com/balhoff)
+ * interoceptive system fixes [1385](https://github.com/obophenotype/uberon/issues/1385)
  * piriform aperture. See https://github.com/obophenotype/mammalian-phenotype-ontology/issues/2396
 
 ## Obsoletions
 
  * Obsoleted Shreckstoff.
  * Obsoleted mitochondrial cloud. See https://github.com/obophenotype/uberon/issues/1360, Fixes https://github.com/obophenotype/uberon/issues/1365
- * obsoleting nematocyst; should be added to GO See #1360
+ * obsoleting nematocyst; should be added to GO See [1360](https://github.com/obophenotype/uberon/issues/1360)
 
 ## Taxon Constraints
 
- * pGCI for seminiferous tubules, fixes #1381
- * weaked TC for gyrus, fixes #1378
- * Relaxing TC on placenta to include yolk-type placenta of marsupials, Fixes #1376
- * removing dev relationship between liver parenchyma and bile duct. Fixes #2614
- * Removed TC excluding stomach from platypus, fixes #1377
+ * pGCI for seminiferous tubules, fixes [1381](https://github.com/obophenotype/uberon/issues/1381)
+ * weaked TC for gyrus, fixes [1378](https://github.com/obophenotype/uberon/issues/1378)
+ * Relaxing TC on placenta to include yolk-type placenta of marsupials, Fixes [1376](https://github.com/obophenotype/uberon/issues/1376)
+ * removing dev relationship between liver parenchyma and bile duct. Fixes [2614](https://github.com/obophenotype/uberon/issues/2614)
+ * Removed TC excluding stomach from platypus, fixes [1377](https://github.com/obophenotype/uberon/issues/1377)
 
 ## Neuro
 
-Thanks to @tgbugs 
+Thanks to [tgbugs](https://github.com/tgbugs) 
 
  * Fixed relationships to obsolete brain regional part for EG. https://github.com/obophenotype/uberon/issues/1360
- * dorsal longitudinal fasciculus subclasses->parts, #1362
- * medial lemniscus fixes #1362
- * Improved  sourced def to cerebrocerebellum. Fixes #1368
- * NT: zona pectinata of basilar membrane of cochlea  * Fixes #1357
+ * dorsal longitudinal fasciculus subclasses->parts, [1362](https://github.com/obophenotype/uberon/issues/1362)
+ * medial lemniscus fixes [1362](https://github.com/obophenotype/uberon/issues/1362)
+ * Improved  sourced def to cerebrocerebellum. Fixes [1368](https://github.com/obophenotype/uberon/issues/1368)
+ * NT: zona pectinata of basilar membrane of cochlea  * Fixes [1357](https://github.com/obophenotype/uberon/issues/1357)
 
 ## lymph sacs
 
- * multiple improvements to representation of lymph sacs; see #1383
+ * multiple improvements to representation of lymph sacs; see [1383](https://github.com/obophenotype/uberon/issues/1383)
 
 ## Other
 
- * remove references to go multi-organism signaling, fixes #1384
- * Fixed syn scope for multicellular organism. Fixes #1361. Added provenance for syns
+ * remove references to go multi-organism signaling, fixes [1384](https://github.com/obophenotype/uberon/issues/1384)
+ * Fixed syn scope for multicellular organism. Fixes [1361](https://github.com/obophenotype/uberon/issues/1361). Added provenance for syns
  * NT: interdigital space. Tidies editor notes
 
 # Ontology Diff Report
