--- a/_posts/2017-10-28-release.md
+++ b/_posts/2017-10-28-release.md
@@ -5,7 +5,7 @@ title: "2017-10-28 release: thagomizer"
 date: 2017-10-28
 summary: "Improved alignment with NIFSTD, better representation of lymph sacs, and the addition of Thagomizer"
 categories: release
-image: 'https://en.wikipedia.org/wiki/Thagomizer#/media/File:Thagomizer.png'
+image: 'https://upload.wikimedia.org/wikipedia/en/6/65/Thagomizer.png'
 tags:
  - release
 ---
