--- a/_posts/2018-02-28-release.md
+++ b/_posts/2018-02-28-release.md
@@ -12,8 +12,8 @@ tags:
 
 # Ontology Diff Report
 
- * syn scope fixes,  Fixes #1390
- * removing overlax owl def for skeleton. Fixes #1391
+ * syn scope fixes,  Fixes [1390](https://github.com/obophenotype/uberon/issues/1390)
+ * removing overlax owl def for skeleton. Fixes [1391](https://github.com/obophenotype/uberon/issues/1391)
  * new terms for mondo
  * obsolete basihyal and vertebral
  * new terms for Phenoscape
